[project]
name = "blogagentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.124.4",
  "langchain>=1.2.0",
  "langchain-core>=1.2.1,<2.0.0",  # Add this
  "langchain-community>=0.4.1",
  "langchain-groq>=1.1.1",
  "langgraph>=1.0.5",
  "langgraph-cli>=0.2.0",
  "uvicorn>=0.38.0",
  "watchdog>=6.0.0",
  "langchain-google-genai>=4.0.0",
]

[project.optional-dependencies]
dev = []
